logo update, nav bar bug fix, alignments

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body{
 	display:none;
 }
 
+
 .home-body{
 	position:absolute;
 	top:15vh;
@@ -67,13 +68,27 @@ body{
 	font-family: 'bebas';
 	font-size:13vh;
 	color:#ffffff;
+	text-align: center;
+}
+
+.rules-body .title{
+	margin:5vh 0 0 0;
+	font-size: 8vh;
+	text-align: center;
+}
+
+.contact-body .title{
+	margin:5vh 0 0 0;
+	font-size: 8vh;
+	text-align: center;
 }
 
 .content{
-	margin:2vh 0 0 20vh;
+	/*margin:2vh 0 0 20vh;*/
 	font-family: 'bebas';
-	font-size:8vh;
-	color:#8ad9fc
+	font-size:13vh;
+	color:#ffffff;
+	text-align: center;
 }
 
 .rules-body{
@@ -104,7 +119,7 @@ body{
 	font-family:'bebas';
 	color:#715bbc;
 	text-align: center;
-	line-height: 15vh;
+	line-height: 30vh;
 }
 
 .hamburger{
@@ -140,13 +155,13 @@ body{
 
 
 .ham-opt{
-	font-size:5vh;
+	font-size:4vh;
 	color:#ffffff;
 	padding-top:1vh;
 }
 
 .ham-content{
-	font-size:4vh;
+	font-size:5vh;
 	color:#7195de;
 }
 
@@ -207,11 +222,13 @@ body{
 		top:80vh;
 		height:20vh;
 		text-align: left;
+		line-height:20vh;
+		text-align: center;
 	}
 	
-	.bot-nav span{
+	/*.bot-nav span{
 		margin-left: 10vh;
-	}
+	}*/
 
 	.hamburger{
 		display:none;
